Revision history for Perl extension {{$dist->name}}

{{$NEXT}}
    - added many variables from perlvar

1.100770  2010-03-18 21:52:17 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - exposed %found_in as a package global
    - removed Class::MethodMaker definitions
    - added Moose definitions
    - removed duplicates
    - added dedup test

1.100710  2010-03-12 00:48:03 Europe/Vienna
    - converted the distribution to Dist::Zilla-style
    - moved the code to App::perlzonji; bin/perlzonji is just a thin wrapper
    - documented the subroutines

0.04  Thu 2010.02.18 20:59:44 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added environment variables (perlrun) and PerlIO layer names
     - explained the word "zonji"

0.03  Fri 2010.02.12 11:36:44 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added --perldoc-command, --debug and other common options (daxim)

0.02  Mon 2010.02.08 14:54:26 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added docs to bin/perlzonji

0.01  Mon 2010.02.08 13:24:15 UTC (Marcel Gruenauer <marcel@cpan.org>)
     - original version